[gd_scene load_steps=7 format=3 uid="uid://c1h13euumpuks"]

[ext_resource type="Script" path="res://Scripts/UI/Collection.gd" id="1_1mr7b"]
[ext_resource type="Texture2D" uid="uid://ce4no7knnx21o" path="res://Assets/Images/icon.svg" id="1_5n4u7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h31e8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t5qoq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ew5ff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nqlcp"]

[node name="Collection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mr7b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.06
anchor_right = 0.97
anchor_bottom = 0.06
offset_bottom = 364.0
grow_horizontal = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Asset Collection"
horizontal_alignment = 1

[node name="AssetScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.22
anchor_right = 0.95
anchor_bottom = 0.83
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="AssetGridCenter" type="CenterContainer" parent="AssetScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AssetGrid" type="GridContainer" parent="AssetScroll/AssetGridCenter"]
layout_mode = 2
columns = 3

[node name="ButtonsRow" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.85
anchor_right = 0.95
anchor_bottom = 0.97
offset_top = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="CollectionButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_h31e8")
disabled = true
icon = ExtResource("1_5n4u7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="MainMenuButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_t5qoq")
icon = ExtResource("1_5n4u7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ProfileButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_ew5ff")
icon = ExtResource("1_5n4u7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SettingsButton" type="Button" parent="ButtonsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_nqlcp")
icon = ExtResource("1_5n4u7")
flat = true
icon_alignment = 1
expand_icon = true
